--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -2,8 +2,8 @@
   <div id="intro" class="intro donation">
     <div class="row-fluid padtopmore">
       <div class="span6">
-        {% if page.donation.content.size > 0 %} {{ page.donation.content }} {% endif %} {% assign thermo_width = 100 %} {% if page.donation.has_amount_goal?
-        %}
+        {% if page.donation_v2.content.size > 0 %} {{ page.donation_v2.content }} {% endif %} {% assign thermo_width = 100 %} {%
+        if page.donation.has_amount_goal? %}
         <div class="clearfix">
           <div class="progress" style="width: {{ thermo_width }}%;">
             <div class="bar bar-success" style="width: {{ page.donation.percent_of_amount_goal | times:100 }}%;">
@@ -117,25 +117,26 @@
               <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="1" id="donation_amount_1">
                 <label id="label1" for="donation_amount_1" class="radio">1</label>
-            </span>
-            <span>
+              </span>
+              <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="2" id="donation_amount_2">
                 <label id="label2" for="donation_amount_2" class="radio">2</label>
-            </span>
-            <span>
+              </span>
+              <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="3" id="donation_amount_3">
                 <label id="label3" for="donation_amount_3" class="radio">3</label>
-            </span>
-            <span>
-                <input type="radio" name="donation[amount_option]" class="donation_amount_option" id="donation_amount_other">
-                <label id="label4" for="donation_amount_other" class="radio">Other</label>
-            </span>
-
+              </span>
+              <div class="donation-other-input-container">
+                <span>
+                  <label id="label4" for="donation_amount_other">Other</label>
+                  <input type="text" name="donation[amount_option]" class="donation_amount_option user-success text" id="donation_amount_other"
+                    placeholder="0.00">
+                </span>
+              </div>
 
 
             </div>
-            {% endif %} 
-            {% else %} {% if page.donation.max_installments > 1 %}
+            {% endif %} {% else %} {% if page.donation.max_installments > 1 %}
             <label for="num_installments" class="padbottomless">I want to pay the following in {% collection_select "num_installments", page.donation.installment_collection,
               class:"select" %} installments</label>
             {% endif %} {% if page.donation.amount_in_cents != 0 %}
@@ -145,22 +146,52 @@
               <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="1" id="donation_amount_1">
                 <label id="label1" for="donation_amount_1" class="radio">1</label>
-            </span>
-            <span>
+              </span>
+              <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="2" id="donation_amount_2">
                 <label id="label2" for="donation_amount_2" class="radio">2</label>
-            </span>
-            <span>
+              </span>
+              <span>
                 <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="3" id="donation_amount_3">
                 <label id="label3" for="donation_amount_3" class="radio">3</label>
-            </span>
-            <span>
-                <input type="radio" name="donation[amount_option]" class="donation_amount_option" id="donation_amount_other">
-                <label id="label4" for="donation_amount_other" class="radio">Other</label>
-            </span>
+              </span>
+              <span>
+                <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="4" id="donation_amount_4">
+                <label id="label4" for="donation_amount_4" class="radio">4</label>
+              </span>
+              <span>
+                <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="5" id="donation_amount_5">
+                <label id="label5" for="donation_amount_5" class="radio">5</label>
+              </span>
+              <span>
+                <input type="radio" name="donation[amount_option]" class="donation_amount_option" value="6" id="donation_amount_6">
+                <label id="label6" for="donation_amount_6" class="radio">6</label>
+              </span>
+              <div class="donation-other-input-container">
+
+                <label id="label4" for="donation_amount_other">Other</label>
+                <input type="text" name="donation[amount_option]" class="donation_amount_option user-success text" id="donation_amount_other"
+                  placeholder="0.00">
+
+              </div>
 
             </div>
             {% endif %} {% endif %}
+            <!--shows the total amount -->
+            <span>
+
+              <span>{{ page.donation_v2.currency_symbol }}</span>
+              <span class="nb_donation_v2_amount">{{ page.donation_v2.confirmation_amount }}</span>
+
+              <span>{{ page.donation_v2.currency_symbol }}</span>
+              <span class="nb_donation_v2_amount">Please select an amount</span>
+              {% if page.donation_v2.donation_frequency == "one-time" %} {% elsif page.donation_v2.donation_frequency == "monthly"%}
+              <div class="nb_donation_v2_interval" data-placeholder="paid monthly">paid monthly</div>
+              {% else %}
+              <div class="nb_donation_v2_interval" data-placeholder="paid monthly">{% if page.donation_v2.interval_monthly? %}paid monthly{% endif %}</div>
+              {% endif %}
+            </span>
+            <!--shows the total amount -->
 
             <div class="padtop">
               <span class="progress-stage-button-next button">Continue</span>
@@ -181,17 +212,8 @@
               <div class="row-fluid">
 
                 <div class="span12">
-                  {% collection_select "billing_address.country_code", page.donation.countries, "code", "name", class:"select", placeholder:"Country"
-                  %}
-                </div>
-
-              </div>
-              <div class="row-fluid">
-
-                <div class="span12">
-                  {% text_field "billing_address.address1", class:"text", placeholder:"Address 1" %} {% text_field "billing_address.address2",
-                  class:"text", placeholder:"Address 2" %} {% text_field "billing_address.address3", class:"text not-us-or-canada
-                  hide", placeholder:"Address 3" %}
+                  {% text_field "billing_address.address1", class:"text", placeholder:"Address 1" %} 
+                  {% text_field "billing_address.address2", class:"text", placeholder:"Address 2" %} 
                 </div>
 
               </div>
@@ -199,11 +221,7 @@
                 <div class="span4">
                   {% text_field "billing_address.city", class:"text", placeholder:"City" %}
                 </div>
-                <div class="span4 us-or-canada us-only hide">
-                  {% collection_select "billing_address.state", page.donation.us_states, "code", "name", class:"select", placeholder:"Province"
-                  %}
-                </div>
-                <div class="span4 us-or-canada canada-only hide">
+                <div class="span4 us-or-canada canada-only">
                   {% text_field "billing_address.state", class:"text", placeholder:"Province" %}
                 </div>
                 <div class="span4">
@@ -266,11 +284,11 @@
 
               </div>
 
-              {% elsif page.donation.merchant_account.is_employer_city_required? %}
+              {% elsif page.donation_v2.merchant_account.is_employer_city_required? %}
               <div class="row-fluid">
 
                 <div class="span12">
-                  {% collection_select "work_address.country_code", page.donation.countries, "code", "name", class:"select", placeholder:"Employer
+                  {% collection_select "work_address.country_code", page.donation_v2.countries, "code", "name", class:"select", placeholder:"Employer
                   country" %}
                 </div>
 
@@ -300,7 +318,7 @@
 
               </div>
 
-              {% if page.donation.merchant_account.is_corporate_contribution_required? %}
+              {% if page.donation_v2.merchant_account.is_corporate_contribution_required? %}
               <div class="row-fluid">
 
                 <div class="span12 input-checkbox">
@@ -338,17 +356,17 @@
 
           <div class="progress-stage stage-3" data-stageID="3">
 
-            {% if page.donation.has_merchant_account? and page.donation.merchant_account.is_paypal_express? == false %}
+            {% if page.donation_v2.has_merchant_account? and page.donation_v2.merchant_account.is_paypal_express? == false %}
             <div class="row-fluid">
               <div class="span8">
                 {% text_field "card_number", class:"text", placeholder:"Credit card number" %}
               </div>
-              <div class="span4 cc">{{ page.donation.merchant_account.accepted_card_icons }}</div>
+              <div class="span4 cc">{{ page.donation_v2.merchant_account.accepted_card_icons }}</div>
             </div>
             <label for="donation_card_expires_on">Expires</label>
             <div class="row-fluid">
               <div class="span12">
-                {{ page.donation.form_card_expires_on }}
+                {{ page.donation_v2.form_card_expires_on }}
               </div>
             </div>
 
@@ -367,14 +385,14 @@
 
             <div class="row-fluid">
               <div class="span12">
-                {% if page.donation.merchant_account.has_contribution_rules? %}
+                {% if page.donation_v2.merchant_account.has_contribution_rules? %}
                 <label for="is_confirmation_text">
                   <strong>Contribution rules</strong>
                 </label>
-                {{ page.donation.merchant_account.contribution_rules }}
+                {{ page.donation_v2.merchant_account.contribution_rules }}
 
                 <label for="donation_is_confirmed" class="checkbox padtop">{% check_box "is_confirmed", class:"checkbox" %} I confirm that the above statements are true and accurate.</label>
-                {% endif %} {% if page.donation.merchant_account.is_de? %}
+                {% endif %} {% if page.donation_v2.merchant_account.is_de? %}
                 <label for="donation_is_de_confirmed" class="checkbox">{% check_box "is_de_confirmed", class:"checkbox" %} I agree to the Democracy Engine
                   <a href="http://www.democracyengine.com/subscriber_tos" target="_new">Terms of Service</a>
                   and
@@ -382,17 +400,17 @@
                 </label>
                 {% endif %} {% if site.ask_to_publish_to_stream? %}
                 <label for="donation_is_private" class="checkbox">{% check_box "is_private", class:"checkbox" %} Don't publish my donation on the website.</label>
-                {% endif %} {% if page.donation.has_merchant_account? and page.donation.merchant_account.is_paypal_express? %}
+                {% endif %} {% if page.donation_v2.has_merchant_account? and page.donation.merchant_account.is_paypal_express? %}
                 <div class="padtop">
                   {% submit_tag "Continue to Paypal", class:"success-button" %}
-                  <div class="padtopmore">{{ page.donation.merchant_account.accepted_card_icons }}</div>
+                  <div class="padtopmore">{{ page.donation_v2.merchant_account.accepted_card_icons }}</div>
                   <a class="progress-stage-button-prev" href="#">Back</a>
                 </div>
 
                 {% else %}
 
                 <div class="row-fluid tax-info">
-                  {% if page.donation.merchant_account.is_taxable? %}
+                  {% if page.donation_v2.merchant_account.is_taxable? %}
 
                   <div class="span12">Contributions are
                     <i>not</i> tax deductible.</div>
@@ -400,39 +418,6 @@
                   <div class="span12 textnarrow">Contributions are tax deductible.</div>
 
                   {% endif %}
-                  <!--shows the total amount -->
-                  <div class="row-fluid">
-                    <div class="span12">
-                      <div class="submit-container">
-                        <div class="donation-v2-amount">
-                          {% if request.current_order %}
-                          <span>{{page.donation_v2.ticket_purchase_total}}</span>
-                          {% else %}
-                          <span>
-                            {% if page.donation_v2.confirmation_amount %}
-                            <span>{{ page.donation_v2.currency_symbol }}</span>
-                            <span class="nb_donation_v2_amount">{{ page.donation_v2.confirmation_amount }}</span>
-                            {% else %}
-                            <span class="hidden">{{ page.donation_v2.currency_symbol }}</span>
-                            <span class="nb_donation_v2_amount">Please select an amount</span>
-                            {% endif %} {% if page.donation_v2.donation_frequency == "one-time" %} {% elsif page.donation_v2.donation_frequency == "monthly"
-                            %}
-                            <div class="nb_donation_v2_interval" data-placeholder="paid monthly">paid monthly</div>
-                            {% else %}
-                            <div class="nb_donation_v2_interval" data-placeholder="paid monthly">{% if page.donation_v2.interval_monthly? %}paid monthly{% endif %}</div>
-                            {% endif %}
-                          </span>
-                          {% endif %}
-                        </div>
-
-                        {% if page.show_consent_form? %}{% include "consent_form" %}{% endif %}
-
-
-                      </div>
-                    </div>
-                    <div class="form-submit"></div>
-                  </div>
-                  <!--shows the total amount -->
                 </div>
 
                 <div class="padtop">
@@ -464,3 +449,4 @@
 </div>
 
 <script src="donateScripts.js"></script>
+<script src="/assets/liquid/theme_donation_v2.js"></script>
