--- a/layout.html
+++ b/layout.html
@@ -208,6 +208,7 @@ Creation Date: 10/31/2014
       </script>
       <![endif]-->
       <style>
+        @media(min-width: 666px){
         .page-type-donation-v2 {
           background: url('{{ site.background_image_url }}') no-repeat center center fixed;
           -webkit-background-size: cover;
@@ -215,6 +216,7 @@ Creation Date: 10/31/2014
           -o-background-size: cover;
           background-size: cover;
         }
+      }
     </style>
     {% endif %}
     
