--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -162,8 +162,8 @@
 
           <div class="progress-stage stage-2" data-stageID="2">
 
-            <div>
-              <div class="row-fluid">
+            <div class="stage-2-forms">
+              <div class="row-fluid first-last-v2">
 
                 <div class="span6">{% text_field "first_name", class:"text", placeholder:"First name" %}</div>
                 <div class="span6">{% text_field "last_name", class:"text", placeholder:"Last name" %}</div>
@@ -177,8 +177,8 @@
                 </div>
 
               </div>
-              <div class="row-fluid">
-                <div class="span4">
+              <div class="row-fluid city-province-postal-v2">
+                <div class="span4 v2-city">
                   {% text_field "billing_address.city", class:"text", placeholder:"City" %}
                 </div>
                 <div class="span4 us-or-canada canada-only">
@@ -189,7 +189,7 @@
                 </div>
 
               </div>
-              <div class="row-fluid">
+              <div class="row-fluid email-phone-v2">
 
                 <div class="span6">{% email_field "email", class:"text", placeholder:"Email" %}</div>
                 <div class="span6">
@@ -353,9 +353,8 @@
                   and
                   <a href="http://www.democracyengine.com/subscriber_privacy_policy" target="_new">Privacy Policy</a>. You will not receive any emails from them, they just deliver your donation to us.
                 </label>
-                {% endif %} {% if site.ask_to_publish_to_stream? %}
-                <label for="donation_is_private" class="checkbox">{% check_box "is_private", class:"checkbox" %} Don't publish my donation on the website.</label>
-                {% endif %} {% if page.donation_v2.has_merchant_account? and page.donation-v2.merchant_account.is_paypal_express? %}
+                {% endif %} 
+                {% if page.donation_v2.has_merchant_account? and page.donation-v2.merchant_account.is_paypal_express? %}
                 <div class="padtop">
                   {% submit_tag "Continue to Paypal", class:"success-button" %}
                   <div class="padtopmore">{{ page.donation_v2.merchant_account.accepted_card_icons }}</div>
@@ -364,27 +363,31 @@
 
                 {% else %}
 
+                <!--show stuff-->
+                <label for="donation_amounts" class="confirm-amount-label">Amount:</label>
+                  {% if page.donation_v2.confirmation_amount %}
+                    <span>{{ page.donation_v2.currency_symbol }}</span>
+                    <span class="nb_donation_v2_amount">{{ page.donation_v2.confirmation_amount }}</span>
+                  {% else %}
+                    <span class="hidden">{{ page.donation_v2.currency_symbol }}</span>
+                    <span class="nb_donation_v2_amount">Please select an amount</span>
+                  {% endif %}
+                <!--end show stuff-->
+                
                 <div class="row-fluid tax-info">
                   {% if page.donation_v2.merchant_account.is_taxable? %}
 
-                  <div class="span12">Contributions are
-                    <i>not</i> tax deductible.</div>
+                  <div class="span12">Contributions are<i>not</i> tax deductible.</div>
                   {% else %}
                   <div class="span12 textnarrow">Contributions are tax deductible.</div>
 
                   {% endif %}
                 </div>
 
-                <!--show stuff-->
-                <label for="donation_amounts">Amount</label><br/>
-                  {% if page.donation_v2.confirmation_amount %}
-                    <span>{{ page.donation_v2.currency_symbol }}</span><span class="nb_donation_v2_amount">{{ page.donation_v2.confirmation_amount }}</span>
-                  {% else %}
-                    <span class="hidden">{{ page.donation_v2.currency_symbol }}</span><span class="nb_donation_v2_amount">Please select an amount</span>
-                  {% endif %}
-                <!--end show stuff-->
 
-                <div class="padtop">
+
+                
+                <div class="submit-container">
                   {% submit_tag "Process Donation", class:"submit-button" %}
                   <a class="progress-stage-button-prev" href="#">Back</a>
                 </div>
