updating donate page limit

--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -143,7 +143,7 @@
                 <div class="row-fluid donation-v2-options ">
                   <div class= "donation-other-input-container"> 
                   <label id="label4" for="donation_amount_other">Other</label>
-                  <input type="text" name="donation[amount]" class="user-success text nb_donation_v2_amount" id="donation_amount_other_input"
+                  $<input type="text" name="donation[amount]" class="user-success text nb_donation_v2_amount" id="donation_amount_other_input"
                     placeholder="0.00" style="width: auto;">
                   </div>
                 </div>
