updating confirmation page

--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -317,14 +317,14 @@
             <div class="progress-stage stage-3" data-stageID="3">
   
               {% if page.donation_v2.has_merchant_account? and page.donation_v2.merchant_account.is_paypal_express? == false %}
-              <div class="row-fluid cc-content">
-                <div class="span8 cc-number">
+              <div class=" cc-content">
+                <div class="cc-number">
                   {% text_field "card_number", class:"text", placeholder:"Credit card number" %}
                 </div>
               </div>
               <div class="cc-info-container"> 
               <label for="donation_card_expires_on" class="cc-expire-label">Expires</label>
-              <div class="row-fluid cc-expire-selection">        
+              <div class=" cc-expire-selection">        
                   {{ page.donation_v2.form_card_expires_on }}
                   <div class="cc-expire">
                       {% text_field "card_verification", class:"text", placeholder:"Security code" %}
@@ -335,12 +335,10 @@
   
   
               <div class="row-fluid">
-                <div class="span12">
+                <div class="cc-confirm-submit-container">
                   {% if page.donation_v2.merchant_account.has_contribution_rules? %}
-                  <label for="is_confirmation_text">
-                    <strong>Contribution rules</strong>
-                  </label>
-                  <p>{{ page.donation_v2.merchant_account.contribution_rules }}</p>
+                  <h5 class="donate-rules-header">Contribution rules</h5>
+                  <p class="donate-rules">{{ page.donation_v2.merchant_account.contribution_rules }}</p>
   
                   
                   {% endif %} {% if page.donation_v2.merchant_account.is_de? %}
@@ -381,7 +379,7 @@
                   </div>
   
   
-                  <label for="donation_is_confirmed" class="checkbox padtop">{% check_box "is_confirmed", class:"checkbox" %} I confirm that the above statements are true and accurate.</label>
+                  <label for="donation_is_confirmed" class="checkbox padtop cc-confirm-true">{% check_box "is_confirmed", class:"checkbox" %} I confirm that the above statements are true and accurate.</label>
                   
                   <div class="submit-container">
                     {% submit_tag "Process Donation", class:"submit-button" %}
