updated test amounts for js

--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -116,7 +116,7 @@
               
                 <h4 class="padbottomless">{{ page.donation-v2.amount_formatted }}</h4>
               <div class="radio-inline padbottomless donation-v2-amounts">
-                <span>
+                <span id="donate-option-1">
                   <input type="radio" name="donation[amount_option]" class="donation_amount_option user-success" value="1" id="donation_amount_1">
                     <label id="label1" for="donation_amount_1" class="radio">1</label>
                 </span>
