updating credit card field

--- a/pages_show_donation_v2_wide.html
+++ b/pages_show_donation_v2_wide.html
@@ -316,8 +316,9 @@
   
             <div class="progress-stage stage-3" data-stageID="3">
   
-              
+              <div class="payment-nb-buitlin"> 
                 {% payment_field 'card' %}
+              </div>
              
   
   
